interpolation syntax in ejs

--- a/1.3ejs/views/home.ejs
+++ b/1.3ejs/views/home.ejs
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>This is home page</h1>
+
+    <!--interpolation syntax - embedding expression and outputs the value-->
+    <h3><%= 1+2 %></h3>
+    <h4><%="tanisha".toUpperCase() %></h4>
+    <!--output - we get 3 on our website-->
+    <!--TANISHA-->
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, veritatis, dignissimos architecto, temporibus iusto sunt suscipit quidem quisquam adipisci in perferendis molestias dolorem ipsa non reprehenderit iste excepturi. Eius, aperiam.</p>
     <button>click me</button>
 </body>
