conditional statement in ejs

--- a/1.3ejs/views/rolldice.ejs
+++ b/1.3ejs/views/rolldice.ejs
@@ -14,5 +14,11 @@
 
     <!-- now if we want the value from rolldice.js -->
      <h2>the value is <%= value %></h2>
+
+     <!--conditional statemt using  tag-->
+     <% if(value==6){ %>
+        <h3>It was a sixer!! Run!!</h3>
+    <% } %>
+
 </body>
 </html>
