looping the instagram followers through ejs

--- a/1.4instagramejs/views/home.ejs
+++ b/1.4instagramejs/views/home.ejs
@@ -10,5 +10,12 @@
 
     <button>Follow</button>
     <button>Message</button>
+
+    <h3>Your followers are:</h3>
+    <ul>
+        <% for(name of followers){ %>
+            <li><%= name %></li>
+        <%} %>
+    </ul>
 </body>
 </html>
